--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Abito - Доска объявлений</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header container">
         <div class="navbar">
             <a href="/index.html" class="logo"></a>
             <img src="img/logo.svg" alt="logo: abito" class="logo-img">
@@ -62,5 +62,246 @@
             </button>
         </div>
     </header>
+
+    <div class="paga-content container">
+        <div class="main">
+            <h2 class="page-title">Рекомендации для вас</h2>
+            <div class="cards">
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/samokat.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Электросамокат</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">10 980 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/material.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Пвх материал 2й сорт</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">170 ₽</strong>
+                    <p class="card-text">Казань, р-н Вахитовский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/vetrov.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Двухсторонняя ветровка <br> для мальчика</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">2 110 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/komod.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Пеленальная доска на комод</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">200 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/daja.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">101 980 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/Fusion.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Ford Fusion, 2007</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">304 000 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/11537051993.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Mercedes-Benz <br> CL-класс, 2011 </h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">1 898 000 ₽</strong>
+                    <p class="card-text">Москва, МКАД, 50-й километр</p>
+                    <p class="card-text">25 июля 12:20</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/t0NjK7ayG6pVgtmvAW2GIYOIG6zDihk.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">1-к. квартира, 37,8 м², <br> 5/16 эт.</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price"> 11 500 000 ₽ </strong>
+                    <p class="card-text">Москва, Волочаевская ул., 14к3</p>
+                    <p class="card-text">Сегодня в 23:00</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/HONDA.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Honda CB-1 </h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">135 000 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/ROZA.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Роза в колбе </h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">3 090 ₽</strong>
+                    <p class="card-text">Москва, ш. Энтузиастов, 31с3</p>
+                    <p class="card-text">Сегодня в 23:07</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/yamaha.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">DVD-плеер Yamaha <br> DVD-E600 неисправный</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">1 000 ₽</strong>
+                    <p class="card-text">Москва, 1-й Пехотный пер.</p>
+                    <p class="card-text">Сегодня в 23:14</p>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="img/DIOR.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <a href="" class="card-link">
+                            <h3 class="card-title">Сумка ведро Dior Wicker</h3>
+                        </a>
+                        <button class="like">
+                            <img src="/img/Like.svg" alt="">
+                        </button>
+                    </div>
+                    <strong class="card-price">37 990 ₽</strong>
+                    <p class="card-text">Москва</p>
+                    <p class="card-text">24 июля 16:44</p>
+                </div>
+            </div>
+        </div>
+        <aside class="sidebar">
+            <h4 class="paget-title">Сервис и услуги</h4>
+            <div class="service">
+                <img src="/img/shipping.svg" alt="icon shipping" class="service-image">
+                <h5 class="service-title">Доставка</h5>
+                <p class="service-text">Проверка при получении и возможность бесплатно вернуть товар</p>
+            </div>
+            <div class="service">
+                <img src="/img/car.svg" alt="icon shipping" class="service-image">
+                <h5 class="service-title">Автотека</h5>
+                <p class="service-text">Отчёт с историей авто: пробег, владельцы, сведения о залоге, ДТП и ремонтах</p>
+            </div>
+            <div class="service">
+                <img src="/img/house.svg" alt="icon shipping" class="service-image">
+                <h5 class="service-title">Онлайн-бронирование жилья</h5>
+                <p class="service-text">Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России</p>
+            </div>
+            <hr color="#E5E5E5" />
+            <footer class="footer">
+                <p class="footer-text">© ООО «Абито», 2011–2021</p>
+                <ul class="footer-menu">
+                    <li class="footermenu-item">
+                        <a href="" class="footer-text">Политика конфиденциальности</a>
+                    </li>
+                    <li class="footermenu-item">
+                        <a href="" class="footer-text">Обработка данных</a>
+                    </li>
+                </ul>
+                <ul class="footer-menu">
+                    <li class="footermenu-item">
+                        <a href="" class="footer-link">Реклама на сайте</a>
+                    </li>
+                    <li class="footermenu-item">
+                        <a href="" class="footer-link">Вакансии</a>
+                    </li>
+                    <li class="footermenu-item">
+                        <a href="" class="footer-link">Помощь</a>
+                    </li>
+                </ul>
+            </footer>
+        </aside>
+    </div>
 </body>
 </html>
