--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <header class="header container">
         <div class="navbar">
-            <a href="/index.html" class="logo"></a>
+            <a href="/index.html" class="logo">
             <img src="img/logo.svg" alt="logo: abito" class="logo-img">
-        
+            </a>
             <nav class="navbar-menu">
                 <ul class="menu">
                     <li class="menu-item">
@@ -68,11 +68,11 @@
             <h2 class="page-title">Рекомендации для вас</h2>
             <div class="cards">
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/samokat.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Электросамокат</h3>
                         </a>
                         <button class="like">
@@ -84,11 +84,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/material.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Пвх материал 2й сорт</h3>
                         </a>
                         <button class="like">
@@ -100,11 +100,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/vetrov.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Двухсторонняя ветровка <br> для мальчика</h3>
                         </a>
                         <button class="like">
@@ -116,11 +116,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/komod.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Пеленальная доска на комод</h3>
                         </a>
                         <button class="like">
@@ -132,11 +132,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/daja.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
                         </a>
                         <button class="like">
@@ -148,11 +148,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/Fusion.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Ford Fusion, 2007</h3>
                         </a>
                         <button class="like">
@@ -164,11 +164,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/11537051993.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Mercedes-Benz <br> CL-класс, 2011 </h3>
                         </a>
                         <button class="like">
@@ -180,11 +180,11 @@
                     <p class="card-text">25 июля 12:20</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/t0NjK7ayG6pVgtmvAW2GIYOIG6zDihk.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">1-к. квартира, 37,8 м², <br> 5/16 эт.</h3>
                         </a>
                         <button class="like">
@@ -196,11 +196,11 @@
                     <p class="card-text">Сегодня в 23:00</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/HONDA.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Honda CB-1 </h3>
                         </a>
                         <button class="like">
@@ -212,11 +212,11 @@
                     <p class="card-text">10 июля 11:39</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/ROZA.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">Роза в колбе </h3>
                         </a>
                         <button class="like">
@@ -228,11 +228,11 @@
                     <p class="card-text">Сегодня в 23:07</p>
                 </div>
                 <div class="card">
-                    <a href="#" class="card-link">
+                    <a href="single.html" class="card-link">
                         <img src="img/yamaha.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
-                        <a href="" class="card-link">
+                        <a href="single.html" class="card-link">
                             <h3 class="card-title">DVD-плеер Yamaha <br> DVD-E600 неисправный</h3>
                         </a>
                         <button class="like">
