--- a/single.html
+++ b/single.html
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <div class="paga-content container">
+    <div class="page-content container">
         <main class="main main-single">
             <div class="content">
                 <h2 class="page-title">Электросамокат kugoo Gx</h2>
